# mangadl

./: .gitignore  README.md  chapters.json  main.py  pyproject.toml
