[project]
name = "mangadl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "curl-cffi>=0.10.0",
    "docling>=2.26.0",
    "img2pdf>=0.6.0",
    "orjson>=3.10.15",
    "tqdm>=4.67.1",
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[project.scripts]
mangadl = "main:app"
